# fastapi

./: main.py  pyproject.toml  sql_app.db
migration/: env.py
migration/versions/: 140b6c479af0_date_mod.py  550bf0127ea8_add_user.py  7b7987839903_init.py  d4bebec995f1_add_relationship.py  e0da5fe7c892_cont.py  ff423c4295f0_phone_add.py
src/: schema.py
src/conf/: config.py
src/database/: connect.py  models.py
src/repository/: cats.py  contacts.py  owners.py  users.py
src/routes/: auth.py  cats.py  contacts.py  owners.py  users.py
src/services/: auth.py  email.py
tests/: test_route_contacts.py  test_unit_repository_contacts.py
