[tool.poetry]
name = "st-fastapi"
version = "0.1.0"
description = ""
authors = ["Serhii Nesterenko <sy.nesterenko@gmail.com>"]
readme = "README.md"
packages = [{include = "st_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
pydantic = {extras = ["email"], version = "^2.4.2"}
alembic = "^1.12.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
